# ciao-contrib

./: .gitignore  Changes.CIAO_scripts  README.md  README_CIAO_scripts  color_color.py  lightcurves.py  make_versions_file  mk_runtool.footer  mk_runtool.header  mk_runtool.py  mk_script_tarfile  pyproject.toml  setup.cfg  setup.py
chips_contrib/: images.py
ciao-4.10/contrib/: Changes.CIAO_scripts
ciao-4.11/contrib/: Changes.CIAO_scripts  README_CIAO_scripts
ciao-4.9/contrib/: .gitignore  Changes.CIAO_scripts  README_CIAO_scripts
ciao_contrib/: __init__.py  caldb.py  cxcdm_wrapper.py  downloadutils.py  logger_wrapper.py  parallel_wrapper.py  param_wrapper.py  parse_pos.py  proptools.py  psf_contrib.py  runtool.py  smooth.py  stacklib.py
ciao_contrib/_tools/: dax_model_editor.py  dax_plot_utils.py  fileio.py  fluximage.py  merging.py  obsinfo.py  run.py  specextract.py  taskrunner.py  utils.py  versioninfo.py
ciao_contrib/cda/: csccli.py  data.py  search.py
ciao_contrib/criss_cross/: .gitignore  README.md  clean_spec  clean_spec.par  clean_spec.py  constants.py  criss_cross.py  criss_cross_tutorial.html  criss_cross_tutorial.ipynb  crisscross  iocaldb.py  widthofexclusion.py
ciao_contrib/region/: fov.py
config/: chips_startup.tk  ciao.ds9  ds9_region_expand.awk
coords/: __init__.py  chandra.py  format.py  gratings.py  resolver.py
crates_contrib/: images.py  masked_image_crate.py  utils.py
data/: 005-random.lut  16_equal.lut  5_ramps.lut  bluebase1.lut  bluebase8.lut  bluyel.lut  eyellow1.lut  fluximage_header_lookup.txt  green4.lut  green6.lut  hue_ramps_08.lut  hue_ramps_16.lut  neon-magenta.lut  obsidmerge_header_lookup.txt  pink3.lut  pinkbase2.lut  pinkbase3.lut  rgb4.lut  sample_srcflux_plugins.py  smart.lut  topography.lut  yellow1.lut
data/ebounds-lut/: asca-ebounds-lut.fits  bepposax-ebounds-lut.fits  calet-ebounds-lut.fits  chandra-ebounds-lut.fits  cos-b-ebounds-lut.fits  einstein-ebounds-lut.fits  einsten-ebounds-lut.fits  exosat-ebounds-lut.fits  halosat-ebounds-lut.fits  ixpe-ebounds-lut.fits  maxi-ebounds-lut.fits  nicer-ebounds-lut.fits  nustar-ebounds-lut.fits  rosat-ebounds-lut.fits  rxte-ebounds-lut.fits  srg-ebounds-lut.fits  suzaku-ebounds-lut.fits  swift-ebounds-lut.fits  xmm-ebounds-lut.fits  xrism-ebounds-lut.fits
dax/: dax_model_editor.py  dax_plot_utils.py  imgproc_wrapper.py  utils.py
param/: acis_check_pha_range.par  acis_split_evt_by_fptemp.par  aplimits.par  apply_fov_limits.par  bkg_fixed_counts.par  blanksky.par  blanksky_image.par  blanksky_sample.par  centroid_map.par  chandra_repro.par  clean_spec.par  color_color.par  crisscross.par  dax.par  ecf_calc.par  energy_hue_map.par  find_mono_energy.par  fine_astro.par  flux_obs.par  get_dither_parameters.par  hexgrid.par  hrc_bkgrnd_lookup.par  make_instmap_weights.par  map2reg.par  marx_rl_decon.par  merge_too_small.par  mkregmap.par  mkrprm.par  mktgresp.par  obsid_search_csc.par  parse_wcs_match_log.par  patch_hrc_ssc.par  pathfinder.par  psf_contour.par  rank_roi.par  regphystocel.par  search_csc.par  simulate_psf.par  specextract.par  srcflux.par  (+4 more)
sherpa_contrib/: __init__.py  all.py  chart.py  diag_resp.py  load_hetg_resp.py  marx.py  matrix_model.py  notebook_plotter.py  utils.py
sherpa_contrib/profiles/: __init__.py  annotations_pylab.py
sherpa_contrib/stats/: kaastra17.py
sherpa_contrib/tests/: test_diag_resp.py  test_xcm.py
sherpa_contrib/xspec/: xcm.py  xsconvolve.py  xsmodels.py  xsusermodels.py
src/: color_color.py
tests/: test_logger_wrapper.py  test_runtool.py
(+1145 files in other folders)
