[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "ciao-contrib"
description = "CIAO Contributed scripts"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}

authors = [
  { name = "Smithsonian Astrophysical Observatory / Chandra X-Ray Center", email = "cxchelp@cfa.harvard.edu" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics"
]

requires-python = ">= 3.10"

[project.urls]
Repository = "https://github.com/cxcsds/ciao-contrib/"
Issues = "https://github.com/cxcsds/ciao-contrib/issues"

[tool.setuptools]
packages = [
  "ciao_contrib",
  "ciao_contrib.region",
  "ciao_contrib._tools",
  "ciao_contrib.cda",
  "coords",
  "crates_contrib",
  "dax",
  "sherpa_contrib",
  "sherpa_contrib.profiles",
  "sherpa_contrib.tests",
  "sherpa_contrib.xspec"
]

py-modules = [
  "lightcurves",
  "color_color"
]
