[build-system]
requires = ["setuptools >= 77.0.3",
            "wheel"
            ]
build-backend = "setuptools.build_meta"

[project]
name = "ciao-contrib"
dynamic = ["version"]

description = "CIAO Contributed scripts"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  {name = "CXCSDS and Friends", email = "cxchelp@cfa.harvard.edu"}
]

[project.urls]
Homepage = "https://cxc.harvard.edu/ciao/download/scripts/"
Repository = "https://github.com/cxcsds/ciao-contrib/"

[tool.setuptools]
packages = [
    "ciao_contrib",
    "ciao_contrib.region",
    "ciao_contrib._tools",
    "ciao_contrib.cda",
    "coords",
    "crates_contrib",
    "dax",
    "sherpa_contrib",
    "sherpa_contrib.profiles",
    "sherpa_contrib.tests",
    "sherpa_contrib.xspec"
]

py-modules = [
    "lightcurves",
    "color_color"
]
