[metadata]
name = ciao-contrib
license = GNU GPL v3
license_files = LICENSE
description = CIAO Contributed scripts
author = CXCSDS and Friends
author_email = cxchelp@cfa.harvard.edu
url = https://github.com/cxcsds/ciao-contrib/

[options]
packages =
    ciao_contrib
    ciao_contrib/region
    ciao_contrib/_tools
    ciao_contrib/cda
    coords
    crates_contrib
    dax
    sherpa_contrib
    sherpa_contrib/profiles
    sherpa_contrib/stats
    sherpa_contrib/tests
    sherpa_contrib/xspec

py_modules =
    lightcurves
    color_color
